[tool.poetry]
name = "process-status-viewer-backend"
version = "0.1.0"
description = ""
authors = ["Edin <ajnesvirajkurcu@gmail.com>"]

[tool.poetry.dependencies]
# Python
python = "~3.10"
# Django
django = "~3.2.12"
djangorestframework = "^3.13.1"
django-environ = "^0.8.1"
django-cors-headers = "^3.11.0"
# DB
psycopg2 = "~2.9.3"

[tool.poetry.dev-dependencies]
# Debuging
Werkzeug = "~2.1.0"
django-debug-toolbar = "^3.2.4"
django-extensions = "~3.1.5"
# Code quality
flake8 = "^4.0.1"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
